<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">
    <ImageView
        android:id="@+id/imvAvatarProifle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/avatar_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alex_johnson"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imvAvatarProifle"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User_Profile_description"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvName"
        android:textSize="14sp"/>
    <LinearLayout
        android:id="@+id/InteractionAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvDescription"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_amount"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/followers_amount"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/following_amount"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>



    </LinearLayout>
    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/InteractionAmount"
        android:text="@string/edit_proifle"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnEditProfile"
        android:text="@string/share_profile"
        android:background="@color/gray_1"
        android:textColor="@color/black_1"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>


</RelativeLayout>
